--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,16 @@
     <string name="table7">Bord 7</string>
 
     <string name="title_activity_tables">Bord X</string>
-    <string name="add">Lägg till</string>
+    <string name="edit">Redigera</string>
     <string name="clear_table">Rensa bord</string>
+
+
+    <!-- Strings related to login -->
+    <string name="prompt_email">Användarnamn</string>
+    <string name="prompt_password">Lösenord</string>
+    <string name="action_sign_in">Logga in eller registrera</string>
+    <string name="action_sign_in_short">Logga in</string>
+    <string name="loggIn">Logga in</string>
+
 </resources>
+
