Vidare kommunikation med backend.
Backend har lite problem med /api/inventory, så InventoryService funkar inte just nu.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">Antons Skafferi</string>
 
+    <string name="ip_address">http://37.139.13.250:8080/api/</string>
+
     <string name="table1">Bord 1</string>
     <string name="table2">Bord 2</string>
     <string name="table3">Bord 3</string>
